--- a/notebooks/CIFO_notebook.ipynb
+++ b/notebooks/CIFO_notebook.ipynb
@@ -11,26 +11,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from constants import SOURCE"
+    "from constants import PATH"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_excel(SOURCE, index_col='Unnamed: 0')\n"
+    "data = pd.read_excel(PATH, index_col='Unnamed: 0')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "4bfcfd77-3cfc-4a2e-b2d2-c79d132c6fa2",
+       "ref": "0ddbed53-fa41-403f-be5e-724be96f7fd3",
        "rows": [
         [
          "0",
@@ -631,7 +631,7 @@
        "34    Zachary Nelson       GK     86      92"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,24 +642,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
-       "       18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34],\n",
-       "      dtype='int64')"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data.index"
+    "gp = data.groupby(by='position')['position'].count()"
    ]
   },
   {
@@ -675,8 +662,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(13)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gp['DEF']"
+   ]
   }
  ],
  "metadata": {
