Splitting dev env

--- a/notebooks/CIFO_notebook.ipynb
+++ b/notebooks/CIFO_notebook.ipynb
@@ -13,7 +13,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['ability', 'cost'], {'N': 100, '0_m': 0.05, '0_c': 0.5, 'd_ma': 1e-05})"
+      ]
+     },
+     "execution_count": 304,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -29,16 +40,7 @@
    "outputs": [],
    "source": [
     "# Load the data\n",
-    "data = pd.read_excel(PATH, index_col='Unnamed: 0')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Data prep\n",
+    "data = pd.read_excel(PATH, index_col='Unnamed: 0')\n",
     "\n",
     "# Reset the indices to obtain a unique Id\n",
     "data.reset_index(inplace=True)\n",
@@ -47,7 +49,11 @@
     "custom_order = list(PARTITIONS.keys())\n",
     "\n",
     "# Set the custom order in the 'position' column using pd.Categorical\n",
-    "data['Position'] = pd.Categorical(data['Position'], categories=custom_order, ordered=True)\n",
+    "data['Position'] = pd.Categorical(\n",
+    "    data['Position']\n",
+    "    , categories=custom_order\n",
+    "    , ordered=True\n",
+    "    )\n",
     "\n",
     "# Sort data by Position\n",
     "data = data.sort_values(by='Position').to_numpy()"
