--- a/notebooks/Drafts_notebook.ipynb
+++ b/notebooks/Drafts_notebook.ipynb
@@ -1,11 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Matrix creating using mod 7,5 "
+   ]
   },
   {
    "cell_type": "code",
