--- a/notebooks/Drafts_notebook.ipynb
+++ b/notebooks/Drafts_notebook.ipynb
@@ -4,14 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Matrix creating using mod 7,5 \n",
-    "\n",
-    "TODO: index matrix and weights; calculate rowise cost; calculate rowise mean and std. dev.\n"
+    "# Matrix creating using mod 7,5 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: index matrix and weights; calculate rowise cost; calculate rowise mean and std. dev."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +75,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "71054c4e-d051-447e-b78e-2d1c3cf41a36",
+       "ref": "97c97e94-ecce-4fc6-8c06-c420a085db63",
        "rows": [
         [
          "0",
@@ -706,7 +713,7 @@
        "34          34    Zachary Nelson      FWD     86             92"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,15 +725,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the data\n",
     "data = pd.read_excel(PATH, index_col='Unnamed: 0')\n",
-    "\n",
-    "# Reset the indices to obtain a unique Id\n",
-    "data.reset_index(inplace=True)\n",
     "\n",
     "# Define the custom order based on the PARTITIONS dictionary keys\n",
     "custom_order = list(PARTITIONS.keys())\n",
@@ -739,7 +743,68 @@
     "    )\n",
     "\n",
     "# Sort data by Position\n",
-    "data = data.sort_values(by='Position').to_numpy()"
+    "data = data.sort_values(by='Position')\n",
+    "\n",
+    "# Reset the indices to obtain a unique Id\n",
+    "data.reset_index(inplace=True, drop=True)\n",
+    "data.reset_index(inplace=True)\n",
+    "\n",
+    "# Transform to np array\n",
+    "data = np.array(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 'Alex Carter', 'GK', 85, 90],\n",
+       "       [1, 'Jordan Smith', 'GK', 88, 100],\n",
+       "       [2, 'Ryan Mitchell', 'GK', 83, 85],\n",
+       "       [3, 'Chris Thompson', 'GK', 80, 80],\n",
+       "       [4, 'Blake Henderson', 'GK', 87, 95],\n",
+       "       [5, 'Maxwell Flores', 'DEF', 81, 72],\n",
+       "       [6, 'Jaxon Griffin', 'DEF', 79, 65],\n",
+       "       [7, 'Caleb Fisher', 'DEF', 84, 85],\n",
+       "       [8, 'Logan Brooks', 'DEF', 86, 95],\n",
+       "       [9, 'Ethan Howard', 'DEF', 80, 70],\n",
+       "       [10, 'Owen Parker', 'DEF', 88, 100],\n",
+       "       [11, 'Lucas Bennett', 'DEF', 85, 90],\n",
+       "       [12, 'Daniel Foster', 'DEF', 90, 110],\n",
+       "       [13, 'Mason Reed', 'DEF', 82, 75],\n",
+       "       [14, 'Brayden Hughes', 'DEF', 87, 100],\n",
+       "       [15, 'Bentley Rivera', 'MID', 88, 100],\n",
+       "       [16, 'Ashton Phillips', 'MID', 90, 110],\n",
+       "       [17, 'Dominic Bell', 'MID', 86, 95],\n",
+       "       [18, 'Gavin Richardson', 'MID', 87, 95],\n",
+       "       [19, 'Austin Torres', 'MID', 82, 80],\n",
+       "       [20, 'Hunter Cooper', 'MID', 83, 85],\n",
+       "       [21, 'Dylan Morgan', 'MID', 91, 115],\n",
+       "       [22, 'Connor Hayes', 'MID', 89, 105],\n",
+       "       [23, 'Nathan Wright', 'MID', 92, 120],\n",
+       "       [24, 'Spencer Ward', 'MID', 84, 85],\n",
+       "       [25, 'Sebastian Perry', 'FWD', 95, 150],\n",
+       "       [26, 'Xavier Bryant', 'FWD', 90, 120],\n",
+       "       [27, 'Elijah Sanders', 'FWD', 93, 140],\n",
+       "       [28, 'Adrian Collins', 'FWD', 85, 90],\n",
+       "       [29, 'Tyler Jenkins', 'FWD', 80, 70],\n",
+       "       [30, 'Chase Murphy', 'FWD', 86, 95],\n",
+       "       [31, 'Landon Powell', 'FWD', 89, 110],\n",
+       "       [32, 'Julian Scott', 'FWD', 92, 130],\n",
+       "       [33, 'Colton Gray', 'FWD', 91, 125],\n",
+       "       [34, 'Zachary Nelson', 'FWD', 86, 92]], dtype=object)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
    ]
   },
   {
@@ -751,20 +816,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0., 28.,  7., 27., 15., 19., 24.],\n",
-       "       [ 1., 30.,  6., 31., 14., 20., 25.],\n",
-       "       [ 2., 11.,  5., 29., 13., 21., 26.],\n",
-       "       [ 3., 10.,  9., 17., 12., 22., 32.],\n",
-       "       [ 4.,  8., 33., 16., 18., 23., 34.]])"
+       "array([[ 0.,  5., 10., 15., 20., 25., 30.],\n",
+       "       [ 1.,  6., 11., 16., 21., 26., 31.],\n",
+       "       [ 2.,  7., 12., 17., 22., 27., 32.],\n",
+       "       [ 3.,  8., 13., 18., 23., 28., 33.],\n",
+       "       [ 4.,  9., 14., 19., 24., 29., 34.]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,12 +839,143 @@
     "shape = (5,7)\n",
     "my_matrix = np.empty(shape=shape)\n",
     "\n",
-    "for i in range(7):\n",
-    "    for j in range(5):\n",
-    "        my_matrix[j][i] = data[5 * i + j][0]\n",
+    "for i in range(shape[1]):\n",
+    "    for j in range(shape[0]):\n",
+    "        my_matrix[j][i] = data[shape[0] * i + j][0]\n",
     "\n",
     "my_matrix"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 90,  72, 100, 100,  85, 150,  95],\n",
+       "       [100,  65,  90, 110, 115, 120, 110],\n",
+       "       [ 85,  85, 110,  95, 105, 140, 130],\n",
+       "       [ 80,  95,  75,  95, 120,  90, 125],\n",
+       "       [ 95,  70, 100,  80,  85,  70,  92]])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ind_cost_matrix = np.array([[\n",
+    "        data[int(index), -1] for index in row\n",
+    "    ] for row in my_matrix\n",
+    "])\n",
+    "\n",
+    "ind_cost_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[692, 710, 750, 680, 592]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "team_cost_matrix = np.array([\n",
+    "    sum(\n",
+    "        data[int(index), -1] for index in row\n",
+    "    ) for row in my_matrix\n",
+    "])\n",
+    "\n",
+    "team_cost_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[86.57142857,  4.16986272],\n",
+       "       [87.42857143,  3.88613443],\n",
+       "       [88.14285714,  3.60272006],\n",
+       "       [86.14285714,  4.05069911],\n",
+       "       [83.71428571,  2.86427681]])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "team_skill_matrix = np.array([(\n",
+    "        np.mean(\n",
+    "            [data[int(index), -2] for index in row]\n",
+    "        ), np.std(\n",
+    "            [data[int(index), -2] for index in row]\n",
+    "        )\n",
+    "    ) for row in my_matrix\n",
+    "])\n",
+    "\n",
+    "team_skill_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(1.51023717558886)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "team_std = np.std(team_skill_matrix[:, 0])\n",
+    "\n",
+    "team_std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -843,7 +1039,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
