--- a/notebooks/Drafts_notebook.ipynb
+++ b/notebooks/Drafts_notebook.ipynb
@@ -879,6 +879,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -886,17 +893,17 @@
        "[692, 710, 750, 680, 592]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "team_cost_matrix = np.array([\n",
+    "team_cost_matrix = [\n",
     "    sum(\n",
     "        data[int(index), -1] for index in row\n",
     "    ) for row in my_matrix\n",
-    "])\n",
+    "]\n",
     "\n",
     "team_cost_matrix"
    ]
